fix: Dockerfile security issue

--- a/ui/backoffice/Dockerfile
+++ b/ui/backoffice/Dockerfile
@@ -1,5 +1,9 @@
 FROM oven/bun:1.1.8-slim
 
+ARG UID=1000
+ARG GID=1000
+RUN groupadd -g $GID nodejs && useradd -m -u $UID -g $GID nodejs
+
 WORKDIR /app/next-app
 
 COPY package.json ./
@@ -7,7 +11,9 @@ COPY bun.lockb ./
 
 RUN bun install
 
-COPY . .
+USER nodejs
+
+COPY --chown=nodejs:nodejs . .
 
 ENV NEXT_TELEMETRY_DISABLED 1
 
